@@ -53,7 +53,7 @@ public:
     FortuneServer(QObject *parent = 0);
 
 protected:
-    void incomingConnection(int socketDescriptor);
+    void incomingConnection(qintptr socketDescriptor);
 
 private:
     QStringList fortunes;
